kube-deploy/smart-farm-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: smart-farm-api
  name: smart-farm-api
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: smart-farm-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/smart-farm-network: "true"
        io.kompose.service: smart-farm-api
    spec:
      containers:
        - image: pondhub2013/smart-farm-api
          name: smart-farm-api
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
