kube-deploy/smart-farm-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: smart-farm-web
  name: smart-farm-web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: smart-farm-web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/smart-farm-network: "true"
        io.kompose.service: smart-farm-web
    spec:
      containers:
        - image: pondhub2013/smart-farm-web
          name: smart-farm-web
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
