kube-deploy/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-farm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: big-boss-smart-farm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-farm-web
                port:
                  number: 80
