kube-deploy/smart-farm-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: smart-farm-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/smart-farm-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/smart-farm-network: "true"
